fixed scrolling logo problem on small screen

--- a/docs/docsite/_static/ansible.css
+++ b/docs/docsite/_static/ansible.css
@@ -144,7 +144,7 @@ table.documentation-table .value-required {
 }
 
 
-.DocSite-nav {
+/* test .DocSite-nav {
     flex: initial;
     -webkit-flex: initial;
     display: flex;
@@ -177,7 +177,7 @@ table.documentation-table .value-required {
     margin-left: 40px;
     margin-top: -4px;
 
-}
+} */
 
 
 .DocSiteProduct-CheckVersionPara {
@@ -303,6 +303,17 @@ table {
     margin-bottom: 40px;
 }
 
+.DocSite-nav {
+   display: none;
+}
+
+.DocSiteNav-logo {
+   display: none;
+}
+
+.DocSiteNav-text {
+   display: none;
+}
 
 .ansibleNav {
    background: #000;
@@ -362,6 +373,40 @@ table {
         display: none;
     }
 
+    .DocSite-nav {
+        flex: initial;
+        -webkit-flex: initial;
+        display: flex;
+        display: -webkit-flex;
+        flex-direction: row;
+        -webkit-flex-direction: row;
+        justify-content: flex-start;
+        -webkit-justify-content: flex-start;
+        padding: 15px;
+        background-color: #000;
+        text-decoration: none;
+        font-family: 'Open Sans', sans-serif;
+        width: 1100px;
+    }
+
+
+    .DocSiteNav-logo {
+        width: 28px;
+        height: 28px;
+        margin-right: 8px;
+        margin-top: -6px;
+        position: fixed;
+    }
+
+
+    .DocSiteNav-title {
+        color: #fff;
+        font-size: 20px;
+        position: fixed;
+        margin-left: 40px;
+        margin-top: -4px;
+
+    }
 
     .ansibleNav{
         height: 45px;
@@ -408,6 +453,41 @@ table {
         display: none;
     }
 
+    .DocSite-nav {
+        flex: initial;
+        -webkit-flex: initial;
+        display: flex;
+        display: -webkit-flex;
+        flex-direction: row;
+        -webkit-flex-direction: row;
+        justify-content: flex-start;
+        -webkit-justify-content: flex-start;
+        padding: 15px;
+        background-color: #000;
+        text-decoration: none;
+        font-family: 'Open Sans', sans-serif;
+        width: 1100px;
+    }
+
+
+    .DocSiteNav-logo {
+        width: 28px;
+        height: 28px;
+        margin-right: 8px;
+        margin-top: -6px;
+        position: fixed;
+    }
+
+
+    .DocSiteNav-title {
+        color: #fff;
+        font-size: 20px;
+        position: fixed;
+        margin-left: 40px;
+        margin-top: -4px;
+
+    }
+    
     .ansibleNav{
         height: 45px;
         width: 1100px;
